	PR c++/37037 	* decl.c (grokdeclarator): Don't generate a void PARM_DECL.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154131 138bc75d-0d04-0410-961f-82ee72b054a4